Fix #2942033: Parse libraries in active theme

--- a/csp.services.yml
+++ b/csp.services.yml
@@ -1,7 +1,12 @@
 services:
   csp.response_listener:
     class: Drupal\csp\EventSubscriber\ResponseCspSubscriber
-    arguments: ['@config.factory', '@cache.default', '@module_handler', '@library.discovery']
+    arguments:
+      - '@config.factory'
+      - '@cache.default'
+      - '@module_handler'
+      - '@theme.manager'
+      - '@library.discovery'
     tags:
       - { name: event_subscriber }
 
