Resolves #2942356: Local report-uri handler

--- a/csp.services.yml
+++ b/csp.services.yml
@@ -10,3 +10,6 @@ services:
     tags:
       - { name: event_subscriber }
 
+  logger.channel.csp:
+    parent: logger.channel_base
+    arguments: ['csp']
