--- a/csp.routing.yml
+++ b/csp.routing.yml
@@ -5,3 +5,12 @@ csp.settings:
     _title: 'Content Security Policy'
   requirements:
     _permission: 'administer site configuration'
+
+csp.reporturi:
+  path: '/report-uri/{type}'
+  defaults:
+    _controller: '\Drupal\csp\Controller\ReportUri::log'
+  requirements:
+    _access: 'TRUE'
+  options:
+    no_cache: 'TRUE'
