Update config schema and default config

--- a/config/install/csp.settings.yml
+++ b/config/install/csp.settings.yml
@@ -1,3 +1,13 @@
-enforce: false
 report:
   handler: csp-module
+report-only:
+  enable: true
+  directives:
+    script-src:
+      base: 'self'
+      flags:
+        - 'unsafe-inline'
+    style-src:
+      base: 'self'
+enforce:
+  enable: false
