--- a/config/install/csp.settings.yml
+++ b/config/install/csp.settings.yml
@@ -1,3 +1,16 @@
-enforce: false
 report:
   handler: csp-module
+report-only:
+  enable: true
+  directives:
+    script-src:
+      base: 'self'
+      flags:
+        # 'unsafe-inline' is required by core/ckeditor
+        # Applying unsafe flags per-library will allow removing this from default config.
+        # @see https://www.drupal.org/project/csp/issues/2943432
+        - 'unsafe-inline'
+    style-src:
+      base: 'self'
+enforce:
+  enable: false
