--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,7 @@
     "issues": "https://www.drupal.org/project/issues/csp",
     "source": "http://cgit.drupalcode.org/csp"
   },
-  "require": { }
+  "require": {
+    "drupal/core" : "^8.5"
+  }
 }
