--- a/csp.info.yml
+++ b/csp.info.yml
@@ -2,6 +2,7 @@ name: Content Security Policy
 type: module
 description: Provide Content-Security-Policy headers
 core: 8.x
+configure: csp.settings
 
 dependencies:
 - drupal:system (>= 8.5)
