Issue #3016001: Add script-src-elem to default config to disable inline script elements
'unsafe-inline' will only apply to inline HTML attributes in supporting browsers.

--- a/config/install/csp.settings.yml
+++ b/config/install/csp.settings.yml
@@ -6,10 +6,14 @@ report-only:
     script-src:
       base: 'self'
       flags:
-        # 'unsafe-inline' is required by core/ckeditor
-        # Applying unsafe flags per-library will allow removing this from default config.
+        # 'unsafe-inline' is required by core/ckeditor to allow event handlers
+        # in HTML attributes.
+        # Applying unsafe flags per-library will allow removing this from
+        # default config.
         # @see https://www.drupal.org/project/csp/issues/2943432
         - 'unsafe-inline'
+    script-src-elem:
+      base: 'self'
     style-src:
       base: 'self'
 enforce:
