Issue #2961905: Refactor reporting handler options as plugins

--- a/csp.services.yml
+++ b/csp.services.yml
@@ -5,6 +5,7 @@ services:
       - '@config.factory'
       - '@module_handler'
       - '@csp.library_policy_builder'
+      - '@plugin.manager.csp_reporting_handler'
     tags:
       - { name: event_subscriber }
   csp.library_policy_builder:
@@ -14,6 +15,10 @@ services:
       - '@module_handler'
       - '@theme_handler'
       - '@library.discovery'
+
+  plugin.manager.csp_reporting_handler:
+    class: Drupal\csp\ReportingHandlerPluginManager
+    parent: default_plugin_manager
 
   logger.channel.csp:
     parent: logger.channel_base
