Issue #2895245: Implement event for modules to alter policy

--- a/config/install/csp.settings.yml
+++ b/config/install/csp.settings.yml
@@ -3,13 +3,8 @@ report-only:
   directives:
     script-src:
       base: 'self'
-      flags:
-        # 'unsafe-inline' is required by core/ckeditor to allow event handlers
-        # in HTML attributes.
-        # Applying unsafe flags per-library will allow removing this from
-        # default config.
-        # @see https://www.drupal.org/project/csp/issues/2943432
-        - 'unsafe-inline'
+    script-src-attr:
+      base: 'self'
     script-src-elem:
       base: 'self'
     style-src:
@@ -22,6 +17,6 @@ enforce:
   enable: true
   directives:
     frame-ancestors:
-      base: self
+      base: 'self'
   reporting:
     plugin: sitelog
