--- a/csp.info.yml
+++ b/csp.info.yml
@@ -2,6 +2,7 @@ name: Content Security Policy
 type: module
 description: Provide Content-Security-Policy headers
 core: 8.x
+core_version_requirement: ^8 || ^9
 configure: csp.settings
 
 dependencies:
