Issue #3101416: Quickedit needs to add 'unsafe-inline' to page for CKEditor

--- a/csp.services.yml
+++ b/csp.services.yml
@@ -24,6 +24,7 @@ services:
     class: Drupal\csp\EventSubscriber\CoreCspSubscriber
     arguments:
       - '@library.dependency_resolver'
+      - '@module_handler'
     tags:
       - { name: event_subscriber }
   csp.ie9_csp_subscriber:
