Update directives enabled by default

--- a/config/install/csp.settings.yml
+++ b/config/install/csp.settings.yml
@@ -9,6 +9,10 @@ report-only:
       base: 'self'
     style-src:
       base: 'self'
+    style-src-attr:
+      base: 'self'
+    style-src-elem:
+      base: 'self'
     frame-ancestors:
       base: 'self'
   reporting:
