--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   "minimum-stability": "dev",
   "support": {
     "issues": "https://www.drupal.org/project/issues/csp",
-    "source": "http://cgit.drupalcode.org/csp"
+    "source": "https://git.drupalcode.org/project/csp"
   },
   "require": {
     "php": "^5.6 || >=7.0",
