--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "source": "https://git.drupalcode.org/project/csp"
   },
   "require": {
-    "php": "^5.6 || >=7.0",
+    "php": ">=7.2",
     "ext-json": "*",
     "drupal/core": "^8.5 || ^9.0"
   }
