--- a/csp.info.yml
+++ b/csp.info.yml
@@ -1,9 +1,5 @@
 name: Content Security Policy
 type: module
 description: Provide Content-Security-Policy headers
-core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^9
 configure: csp.settings
-
-dependencies:
-- drupal:system (>= 8.5)
