Issue #3296908: Drupal 10 compatibility

--- a/csp.info.yml
+++ b/csp.info.yml
@@ -1,5 +1,5 @@
 name: Content Security Policy
 type: module
 description: Provide Content-Security-Policy headers
-core_version_requirement: ^9
+core_version_requirement: ^9.2 || ^10
 configure: csp.settings
